--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul id="navBar">
-                <li><a href="./imdex.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a class="active" href="./About.html">About</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
