--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul id="navBar">
-                <li><a class="active" href="./imdex.html">Home</a></li>
+                <li><a class="active" href="./index.html">Home</a></li>
                 <li><a href="./About.html">About</a></li>
                 <li><a href="./Contact.html">Contact</a></li>
             </ul>
